# Arquitecturas-Avanzadas-Evergreen-Fin

./: .gitignore  README.md
apps/patrimony-back/: memory:  pyproject.toml
apps/patrimony-back/libs/: TortoiseCRUDRouter.py
apps/patrimony-back/patrimony_back/: __init__.py  main.py
apps/patrimony-back/patrimony_back/models/: Asset.py  AssetType.py  Liability.py  LiabilityType.py  __init__.py
apps/patrimony-back/patrimony_back/routers/: AssetRouter.py  AssetTypeRouter.py  LiabilityRouter.py  LiabilityTypeRouter.py
apps/patrimony-front/: pyproject.toml
apps/patrimony-front/libs/: Singleton.py
apps/patrimony-front/patrimony_front/: __init__.py  main.py
apps/patrimony-front/patrimony_front/controllers/: AssetController.py  Connection.py  LiabilityController.py
apps/patrimony-front/patrimony_front/models/: Asset.py  AssetType.py  Connection.py  Liability.py  LiabilityType.py
apps/patrimony-front/patrimony_front/templates/asset/: create.html
apps/patrimony-front/patrimony_front/templates/liability/: create.html
apps/patrimony-front/patrimony_front/views/: AssetView.py
apps/patrimony-front/patrimony_front/views/templates/asset/: create.html
