[tool.poetry]
name = "patrimony-front"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "patrimony_front"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
httpx = "^0.23.3"
jinja2 = "^3.1.2"
pydantic = "^1.10.6"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "patrimony_front:start"